Add backend ToString support